[package]
name = "boa_console"
version = "0.1.0"
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rustc-hash = { version = "2", features = ["std"] }
boa_engine.workspace = true
boa_gc = "0.19"

[dev-dependencies]
indoc = "2"
textwrap = "0.16"
