[package]
name = "boa_utils"
version = "0.1.0"
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rustc-hash = { version = "2", features = ["std"] }
boa_engine.workspace = true
boa_gc = { version = "0.20" }
boa_parser = { version = "0.20" }
isahc = "1.7"
futures-util = "0.3"
futures-concurrency = "7"
smol = "2"
tracing = "0.1"
url = "2"
log = "0.4"

[dev-dependencies]
indoc = "2"
textwrap = "0.16"
test-log = "0.2"
