[package]
name = "boa_utils"
version = "0.1.0"
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rustc-hash = { version = "2", features = ["std"] }
boa_engine = { workspace = true, features = ["annex-b"] }
boa_gc = { version = "0.20" }
boa_parser = { version = "0.20", features = ["annex-b"] }
isahc = "1.7"
futures-util = "0.3"
futures-concurrency = "7"
smol = "2"
tracing = "0.1"
url = "2"
log = "0.4"
anyhow = "1.0"

# for cacheing
mime = "0.3.17"
async-fs = "2.1.2"

# for encoding/decoding
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.1.1", features = ["use-std"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

[dev-dependencies]
indoc = "2"
textwrap = "0.16"
test-log = "0.2"
tempfile = "3.17"
