[package]
name = "boa_utils"
version = "0.1.0"
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
doctest = false

[dependencies]
rustc-hash = { version = "2", features = ["std"] }
boa_engine = { workspace = true, features = ["annex-b"] }
boa_gc = { version = "0.20" }
boa_parser = { version = "0.20", features = ["annex-b"] }
tokio = { workspace = true }
nyanpasu-utils = { workspace = true }
reqwest = { workspace = true }
futures-util = "0.3"
futures-concurrency = "7"
smol = "2"
tracing = "0.1"
url = "2"
log = "0.4"
anyhow = "1.0"
include_url_macro = { git = "https://github.com/libnyanpasu/include_url_macro", rev = "b0b88e5" }
include-compress-bytes = { git = "https://github.com/libnyanpasu/include-compress-bytes", rev = "250a12c" }
phf = { version = "0.13.1", features = ["macros"] }

# for cacheing
mime = "0.3.17"
async-fs = "2.1.2"

# for encoding/decoding
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.1.1", features = ["use-std"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
brotli = "8.0.2"

[dev-dependencies]
indoc = "2"
textwrap = "0.16"
test-log = { workspace = true }
tempfile = "3.17"
