[package]
name = "nyanpasu-config"
version = "0.1.0"
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["default-meta"]
default-meta = []

[dependencies]
nyanpasu-helper = { path = "../nyanpasu-helper" }
nyanpasu-egui = { path = "../nyanpasu-egui" }
nyanpasu-utils.workspace = true

thiserror.workspace = true
specta = { version = "^2.0.0-rc.25" }
derive_builder = "0.20" # for builder pattern and runtime validation
strum = { version = "0.28", features = ["derive"] } # for enum string conversion
atomic_enum = "0.3.0" # for atomic enum
enumflags2 = "0.7" # for enum flags
struct-patch = { version = "0.12" }
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.20.0", features = ["indexmap_2", "json"] }
indexmap = { version = "2.0", features = ["serde"] }
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.23.1", features = ["serde", "v4"] }
serde_yaml_ng = { version = "0.10", branch = "feat/specta-update", git = "https://github.com/libnyanpasu/serde-yaml-ng.git", features = [
  "specta",
] }
port_scanner = "0.1.5"

tracing.workspace = true
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "json",
  "parking_lot",
] }
language-tags = { version = "0.3.2", features = ["serde"] }
csscolorparser = { version = "0.8.3", features = ["serde"] }
