[package]
name = "nyanpasu-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
dashmap = "6"
indexmap = { version = "2.2.3", features = ["serde"] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
