[package]
name = "nyanpasu-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1"
arc-swap = "1"
async-trait = "0.1"
dashmap = "6"
indexmap = { version = "2.2.3", features = ["serde"] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
serde = { version = "1.0", features = ["derive"] }
atomicwrites = "0.4.4"
camino = { version = "1.1.9", features = ["serde1"] }
fs-err = { workspace = true }
serde_yaml_ng = { version = "0.10", branch = "feat/specta-update", git = "https://github.com/libnyanpasu/serde-yaml-ng.git", features = [
  "specta",
] }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = "3"
