[package]
name = "nyanpasu-egui"
version = "0.1.0"
edition = "2021"

[lib]
name = "nyanpasu_egui"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "nyanpasu-network-statistic-widget-large"
path = "./src/main.rs"

[[bin]]
name = "nyanpasu-network-statistic-widget-small"
path = "./src/small.rs"

[dependencies]
eframe = "0.29.1"
egui_extras = { version = "*", features = ["all_loaders"] }
parking_lot = "0.12"
image = { version = "0.25.5", features = ["jpeg", "png"] }
humansize = "2.1.3"
# for svg currentColor replacement
resvg = "0.44.0"         # for svg rendering
usvg = "0.44.0"          # for svg parsing
csscolorparser = "0.7.0" # for color conversion
