[package]
name = "sysproxy"
version = "0.3.1"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
keywords = ["system-proxy", "proxy", "networksetup", "gsettings"]
description = "A library for set/get system proxy. Supports Windows, macOS and linux (via gsettings)."

[dependencies]
thiserror = "1"

[target.'cfg(target_os = "macos")'.dependencies]
interfaces = "0.0.9"

[target.'cfg(target_os = "windows")'.dependencies]
iptools = "0.2.4"
winreg = { version = "0.10", features = ["transactions"] }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.52"
features = [
  "Win32_Networking_WinInet",
  # "Win32_Networking_WinHttp",
  "Win32_NetworkManagement_Rras",
  "Win32_Foundation",
]
